--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
     <meta charset="UTF-8" />
     <title>Git Training</title>
   </head>
-  <body></body>
+  <body>
+    <p>変更のチェック確認</p>
+  </body>
 </html>
